--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 		#chat
 		{
 			
-			padding: 40px 30px;
+			padding: 60px 30px;
 			width:100%;
 			height: 800px;
 			display: none;
@@ -90,9 +90,10 @@
 	.elige{ margin:auto; margin-bottom: 80px;}	
 	.rojo{width: 20px; height: 20px; border-radius: 100%; background-color: #ff0000;}
 
-	button{display: none; margin:auto; background-color: #000; color:#fff; margin-top: 15px; border-radius: 5px; font-family: 'Open Sans'; padding: 8px;}
+	button {display: none; margin:auto; background-color: #000; color:#fff; margin-top: 15px; border-radius: 5px; font-family: 'Open Sans'; padding: 8px 20px; border: none !important;}
 	
 	.facebook{background-color:#fff; margin-top: 20px; padding: 8px; text-align: center; outline: 4px solid #fff;}
+	.salida{display:block !important; margin-bottom: 20px;}
 
 		@media screen and (max-width: 600px){
 			#bienvenida{margin-top:120px; max-width: 90%;}
@@ -125,6 +126,7 @@
 		<!--<div>
 			<div class="rojo"></div>
 		</div>-->
+		<div class="col-md-12"><button class="pull-right salida" onclick="salir()">Salir</button></div>
 		<div class="col-md-4">
 		<div class="encabezado">
 		<div>
@@ -205,7 +207,12 @@
 			
 		}
 
-		//$('#lista_conectados').append('<li class="list-group-item">'+ nombre +'</li>');
+		function salir(){
+
+			
+
+	}	
+		
 
 		  function nombreUsuario(){
 
